[package]
name = "lyvi"
version = "0.1.0"
authors = ["Ondrej Kipila <ondrej.kipila@icloud.com>"]
edition = "2024"
license = "MIT"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
image = "0.25.10"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
whisper-rs = "0.16.0"
palette = "0.7.6"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
color-eyre = "0.6.5"
async-trait = "0.1.89"
clap = { version = "4.6.0", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
media-remote = "0.3.6"
