[package]
name = "lyvi"
version = "0.1.0"
authors = ["Ondrej Kipila <ondrej.kipila@icloud.com>"]
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
async-trait = "0.1.89"
ratatui = "0.30.0"
crossterm = "0.29.0"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
image = "0.25.10"
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"

[target.'cfg(target_os = "macos")'.dependencies]
media-remote = "0.3.6"
